data/derived/fa15/progs/unify/prog3343.ml.out
Characters 23-30:
  let _ = sepConcat "X" ["hello"];;
                         ^^^^^^^
Error: This expression has type string but an expression was expected of type
         string list
